# plc_lines

./: .gitignore  .python-version  Dockerfile  FAKE_PLC.json  README.md  docker-compose.yml  manage.py  package-lock.json  package.json  pyproject.toml  setup.cfg
_plc_lines/: .gitignore  __init__.py  asgi.py  celery.py  manage.py  settings.py  urls.py  wsgi.py
_plc_lines/_plc_lines/: asgi.py  urls.py  wsgi.py
_plc_lines/settings/: base.py  docker.py
devices/: admin.py  forms.py  models.py  readers.py  tasks.py  urls.py  views.py
devices/management/commands/: init_db_and_data.py
devices/migrations/: 0001_initial.py  0002_alert.py
devices/static/devices/: chart.css  chart.js  pdf_chart.css
devices/templates/admin/devices/: app_index.html
devices/templates/devices/: chart.html
devices/tests/: models.py  test_models.py  test_readers.py
