[tool.poetry]
name = "plc_lines"
version = "0.1.0"
description = ""
authors = ["Fran Hrzenjak <fran.hrzenjak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
pylogix = {git = "https://github.com/dmroeder/pylogix"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
