[tool.poetry]
name = "plc_lines"
version = "0.1.0"
description = ""
authors = ["Fran Hrzenjak <fran.hrzenjak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.3"
pylogix = {git = "https://github.com/dmroeder/pylogix"}  # not published on pypi?
celery = "^4.4.0"
six = "^1.14.0"
django-celery-beat = {git = "https://github.com/celery/django-celery-beat"}  # waiting for: https://github.com/celery/django-celery-beat/issues/308
redis = "^3.4.1"
django-admin-action-buttons = "^0.1.4"
django-npm = "^1.0.0"
requests = "^2.23.0"
pdfkit = "^0.6.1"

[tool.poetry.dev-dependencies]
model-mommy = "^2.0.0"
coverage = {extras = ["toml"], version = "^5.0.3"}
flake8 = "^3.7.9"
flake8-bugbear = "^20.1.4"
black = "^19.10b0"
freezegun = "^0.3.15"
django_extensions = "^2.2.8"

[tool.coverage.run]
source = ["."]
omit = [
    "*/.local/*",
    "*/tests/*",
    "*/migrations/*",
]

[tool.black]
line-length = 79
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
